--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0270.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0270.html
@@ -2147,14 +2147,12 @@
         </span>
         <span title="bbox 824 2887 892 2917" class="ocr_word" id="w_416">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">xuiv</ins>
-            <del title="nlp 0.90">xuiv</del>
+            <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
         <span title="bbox 921 2894 987 2917" class="ocr_word" id="w_417">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">otn.</ins>
-            <del title="nlp 0.90">otn.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span title="bbox 1018 2883 1044 2916" class="ocr_word" id="w_418">
@@ -2175,8 +2173,7 @@
         </span>
         <span title="bbox 1639 2885 1817 2929" class="ocr_word" id="w_421">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’jivrjv</ins>
-            <del title="nlp 0.90">’jivrjv</del>
+            <ins title="nlp 2.00">εἰρημένην</ins>
           </span>
         </span>
         <span title="bbox 1837 2885 1961 2927" class="ocr_word" id="w_422">
@@ -2293,13 +2290,12 @@
         </span>
         <span lang="grc" title="bbox 949 2997 1136 3046" class="ocr_word" id="w_444">
           <span class="alternatives">
-            <ins title="nlp 2.00">22 Ἀριστοτ.]</ins>
+            <ins title="nlp 2.00">Ἀριστοτ.]</ins>
           </span>
         </span>
         <span title="bbox 1173 3001 1213 3033" class="ocr_word" id="w_445">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">tf.</ins>
-            <del title="nlp 0.90">tf.</del>
+            <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
         <span title="bbox 1243 3000 1314 3034" class="ocr_word" id="w_446">
@@ -2349,12 +2345,7 @@
         </span>
         <span title="bbox 1895 3001 1986 3033" class="ocr_word" id="w_454">
           <span class="alternatives">
-            <ins title="nlp 2.00">554a</ins>
-          </span>
-        </span>
-        <span title="bbox 2001 3000 2041 3032" class="ocr_word" id="w_455">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">10</ins>
+            <ins title="nlp 2.00">554a10</ins>
           </span>
         </span>
       </span>
