--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0135.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0135.html
@@ -249,16 +249,11 @@
         </span>
         <span id="w_46" class="ocr_word" title="bbox 1748 431 1797 457" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δι-</ins>
+            <ins title="nlp 2.00">διδασκαλίας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 124 487 1797 541">
-        <span id="w_47" class="ocr_word" title="bbox 124 490 331 532" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δασκαλίας</ins>
-          </span>
-        </span>
         <span id="w_48" class="ocr_word" title="bbox 361 492 487 528" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">αὐτῶν</ins>
@@ -410,16 +405,11 @@
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1682 638 1798 677" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χαρα-</ins>
+            <ins title="nlp 2.00">χαρακτηρίζει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 125 693 1801 748">
-        <span id="w_79" class="ocr_word" title="bbox 125 695 292 748" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κτηρίζει</ins>
-          </span>
-        </span>
         <span id="w_80" class="ocr_word" title="bbox 324 710 366 733" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -472,16 +462,11 @@
         </span>
         <span id="w_90" class="ocr_word" title="bbox 1719 705 1801 732" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συν-</ins>
+            <ins title="nlp 2.00">συναναιρεῖν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 123 761 1861 816">
-        <span id="w_91" class="ocr_word" title="bbox 123 778 288 816" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αναιρεῖν</ins>
-          </span>
-        </span>
         <span id="w_92" class="ocr_word" title="bbox 321 777 383 802" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1496,9 +1481,9 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_291" class="ocr_word" title="bbox 1797 1925 1861 1958">
+        <span id="w_291_0" class="ocr_word" title="bbox 1797 1925 1861 1958">
           <span class="alternatives">
-            <ins title="nlp 2.00">99ν</ins>
+            <ins class="alt" title="nlp 2.00">99v</ins>
           </span>
         </span>
       </span>
@@ -1954,9 +1939,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 131 2549 1801 2604">
-        <span id="w_383" class="ocr_word" title="bbox 220 2549 366 2602" lang="grc">
+        <span id="w_383_0" class="ocr_word" title="bbox 220 2549 366 2602">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδεὶς</ins>
+            <ins class="alt" title="nlp 2.00">(οὐδεὶς</ins>
+          </span>
+        </span>
+        <span id="w_383_1" class="ocr_word" title="bbox 220 2549 366 2602">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 397 2550 466 2604" lang="grc">
@@ -1997,11 +1987,6 @@
         <span id="w_391" class="ocr_word" title="bbox 1557 2560 1690 2599" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φωνῆς</ins>
-          </span>
-        </span>
-        <span id="w_392" class="ocr_word" title="bbox 1735 2559 1801 2584" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐ</ins>
           </span>
         </span>
       </span>
@@ -2140,9 +2125,14 @@
             <ins class="alt" title="nlp 1.00">προέταξα</ins>
           </span>
         </span>
-        <span id="w_419" class="ocr_word" title="bbox 811 2812 835 2843">
+        <span id="w_419_0" class="ocr_word" title="bbox 811 2812 835 2843">
           <span class="alternatives">
-            <ins title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_419_1" class="ocr_word" title="bbox 811 2812 835 2843">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_420" class="ocr_word" title="bbox 1027 2813 1058 2844">
@@ -2173,11 +2163,6 @@
         <span id="w_425" class="ocr_word" title="bbox 1599 2818 1733 2849" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἴπομεν</ins>
-          </span>
-        </span>
-        <span id="w_426" class="ocr_word" title="bbox 1762 2804 1798 2838">
-          <span class="alternatives">
-            <ins title="nlp 2.00">C1</ins>
           </span>
         </span>
       </span>
