--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0271.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0271.html
@@ -1849,8 +1849,7 @@
       <span class="ocr_line" title="bbox 246 2668 1804 2730">
         <span id="w_349" class="ocr_word" title="bbox 246 2675 305 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Td</ins>
-            <del title="nlp 0.90">Td</del>
+            <ins title="nlp 2.00">Τὰ</ins>
           </span>
         </span>
         <span id="w_350" class="ocr_word" title="bbox 335 2690 526 2730" lang="grc">
