--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0243.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0243.html
@@ -242,14 +242,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 1597 355 1685 411">
+        <span id="w_43_0" class="ocr_word" title="bbox 1597 355 1685 411">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ὡς&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;ὡς&amp;#003E;</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1706 372 1832 410" lang="grc">
+        <span id="w_43_1" class="ocr_word" title="bbox 1597 355 1685 411">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πατὴρ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1422,7 +1422,7 @@
         </span>
         <span id="w_275" class="ocr_word" title="bbox 1545 1665 1618 1716" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὡς</ins>
+            <ins title="nlp 2.00">(ὡς</ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1655 1680 1696 1703" lang="grc">
@@ -1844,14 +1844,14 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_356" class="ocr_word" title="bbox 1137 2146 1363 2201" lang="grc">
+        <span id="w_356_0" class="ocr_word" title="bbox 1137 2146 1363 2201">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τεχνητοῦ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τεχνητοῦ&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1395 2161 1528 2201" lang="grc">
+        <span id="w_356_1" class="ocr_word" title="bbox 1137 2146 1363 2201">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέχνη.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
