--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0045.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0045.html
@@ -299,16 +299,11 @@
         </span>
         <span id="w_55" class="ocr_word" title="bbox 1803 561 1898 586" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀντι-</ins>
+            <ins title="nlp 2.00">ἀντιστροφῆς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 225 617 1897 675">
-        <span id="w_56" class="ocr_word" title="bbox 225 637 393 675" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στροφῆς</ins>
-          </span>
-        </span>
         <span id="w_57" class="ocr_word" title="bbox 426 619 719 675" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">στοχαζόμενοι,</ins>
@@ -981,9 +976,14 @@
             <ins class="alt" title="nlp 1.00">μήτε</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 933 1374 937 1426" lang="grc">
+        <span id="w_189_0" class="ocr_word" title="bbox 933 1374 937 1426">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ι</ins>
+            <ins class="alt" title="nlp 2.00">|</ins>
+          </span>
+        </span>
+        <span id="w_189_1" class="ocr_word" title="bbox 933 1374 937 1426">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 965 1373 1169 1414" lang="grc">
@@ -1004,11 +1004,6 @@
         <span id="w_193" class="ocr_word" title="bbox 1682 1386 1719 1411" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1756 1386 1811 1410" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οἷς καὶ</ins>
           </span>
         </span>
       </span>
@@ -1268,16 +1263,11 @@
         </span>
         <span id="w_245" class="ocr_word" title="bbox 1817 1729 1904 1768" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προ-</ins>
+            <ins title="nlp 2.00">προτίθεται</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 225 1785 1905 1847">
-        <span id="w_246" class="ocr_word" title="bbox 225 1795 369 1834" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τίθεται</ins>
-          </span>
-        </span>
         <span id="w_247" class="ocr_word" title="bbox 414 1807 584 1847" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποιῆσαι.</ins>
@@ -1394,7 +1384,7 @@
         </span>
         <span id="w_269" class="ocr_word" title="bbox 373 1932 565 1985" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰδιωτικὰ</ins>
+            <ins title="nlp 2.00">(ἰδιωτικὰ</ins>
           </span>
         </span>
         <span id="w_270" class="ocr_word" title="bbox 602 1932 643 1970" lang="grc">
@@ -1968,9 +1958,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_382" class="ocr_word" title="bbox 261 2705 319 2744" lang="grc">
+        <span id="w_382_0" class="ocr_word" title="bbox 261 2705 319 2744">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οἰ&amp;x003E;?</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἱ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_382_1" class="ocr_word" title="bbox 261 2705 319 2744">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_385" class="ocr_word" title="bbox 543 2704 560 2735">
@@ -2035,11 +2030,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">an</ins>
             <del title="nlp 0.90">an</del>
-          </span>
-        </span>
-        <span id="w_397" class="ocr_word" title="bbox 1802 2686 1980 2723" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐλλίπωσι</ins>
           </span>
         </span>
       </span>
@@ -2368,9 +2358,14 @@
             <del title="nlp 0.90">an</del>
           </span>
         </span>
-        <span id="w_461" class="ocr_word" title="bbox 412 2996 508 3037" lang="grc">
+        <span id="w_461_0" class="ocr_word" title="bbox 412 2996 508 3037">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οἶον&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_461_1" class="ocr_word" title="bbox 412 2996 508 3037">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_462" class="ocr_word" title="bbox 534 2997 577 3040" lang="grc">
@@ -2425,18 +2420,8 @@
             <ins title="nlp 2.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_472" class="ocr_word" title="bbox 1891 2978 1982 3013" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολι-</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 166 3028 1978 3095">
-        <span id="w_473" class="ocr_word" title="bbox 166 3055 240 3095" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τικὰ</ins>
-          </span>
-        </span>
         <span id="w_474" class="ocr_word" title="bbox 276 3054 333 3087" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
