--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0244.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0244.html
@@ -863,9 +863,9 @@
             <ins class="alt" title="nlp 1.00">τότε</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 2064 960 2151 997">
+        <span id="w_163_0" class="ocr_word" title="bbox 2064 960 2151 997">
           <span class="alternatives">
-            <ins title="nlp 2.00">265ν</ins>
+            <ins class="alt" title="nlp 2.00">265v</ins>
           </span>
         </span>
       </span>
@@ -1143,9 +1143,14 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_217" class="ocr_word" title="bbox 1493 1300 1595 1357">
+        <span id="w_217_0" class="ocr_word" title="bbox 1493 1300 1595 1357">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τοῦ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;τοῦ&amp;#003E;</ins>
+          </span>
+        </span>
+        <span id="w_217_1" class="ocr_word" title="bbox 1493 1300 1595 1357">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 1612 1315 1900 1355" lang="grc">
@@ -1156,11 +1161,6 @@
         <span id="w_219" class="ocr_word" title="bbox 1919 1317 1961 1341" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_220" class="ocr_word" title="bbox 1984 1301 2092 1355" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγον</ins>
           </span>
         </span>
       </span>
@@ -1356,16 +1356,11 @@
         </span>
         <span id="w_258" class="ocr_word" title="bbox 2031 1525 2092 1549" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">με-</ins>
+            <ins title="nlp 2.00">μεμαθήκαμεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 408 1578 2091 1635">
-        <span id="w_259" class="ocr_word" title="bbox 408 1584 641 1635" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μαθήκαμεν</ins>
-          </span>
-        </span>
         <span id="w_260" class="ocr_word" title="bbox 688 1596 727 1620" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
