--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0272.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0272.html
@@ -443,9 +443,14 @@
             <ins class="alt" title="nlp 1.00">θεωροῦντι</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 1465 930 1539 988">
+        <span id="w_82_0" class="ocr_word" title="bbox 1465 930 1539 988">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;αἱ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_82_1" class="ocr_word" title="bbox 1465 930 1539 988">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1560 933 1772 987" lang="grc">
@@ -456,11 +461,6 @@
         <span id="w_84" class="ocr_word" title="bbox 1804 946 2006 985" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ποιότητες</ins>
-          </span>
-        </span>
-        <span id="w_85" class="ocr_word" title="bbox 2037 947 2099 971" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -1622,8 +1622,7 @@
         </span>
         <span id="w_302" class="ocr_word" title="bbox 1177 3067 1219 3099">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">Η1</ins>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1401 3079 1460 3111" lang="grc">
