--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0246.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0246.html
@@ -585,7 +585,7 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1326 749 1536 805" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;πέμπτον&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_112" class="ocr_word" title="bbox 1569 752 1791 805" lang="grc">
@@ -669,7 +669,7 @@
         </span>
         <span id="w_127" class="ocr_word" title="bbox 852 889 1017 943" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἑκάστη</ins>
+            <ins title="nlp 2.00">(ἑκάστη</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1050 889 1121 943" lang="grc">
@@ -821,9 +821,9 @@
             <ins class="alt" title="nlp 1.00">ταῦτα·</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 2069 1035 2152 1070">
+        <span id="w_157_0" class="ocr_word" title="bbox 2069 1035 2152 1070">
           <span class="alternatives">
-            <ins title="nlp 2.00">266ν</ins>
+            <ins class="alt" title="nlp 2.00">266v</ins>
           </span>
         </span>
       </span>
