--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0273.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0273.html
@@ -210,7 +210,7 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 759 454 911 510" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὥσπερ</ins>
+            <ins title="nlp 2.00">(ὥσπερ</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 942 472 1012 510" lang="grc">
@@ -1089,7 +1089,7 @@
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1161 1550 1312 1606" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σχέσιν</ins>
+            <ins title="nlp 2.00">(σχέσιν</ins>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1344 1553 1414 1606" lang="grc">
@@ -2282,8 +2282,7 @@
         </span>
         <span id="w_440" class="ocr_word" title="bbox 620 2903 685 2925">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_441" class="ocr_word" title="bbox 713 2892 738 2925">
@@ -2427,8 +2426,7 @@
         </span>
         <span id="w_467" class="ocr_word" title="bbox 390 3019 455 3041">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_468" class="ocr_word" title="bbox 478 3010 518 3042">
@@ -2465,8 +2463,7 @@
         </span>
         <span id="w_474" class="ocr_word" title="bbox 1249 3020 1314 3043">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_475" class="ocr_word" title="bbox 1336 3011 1392 3043">
