--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0136.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0136.html
@@ -217,9 +217,14 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1173 410 1513 449" lang="grc">
+        <span id="w_39_0" class="ocr_word" title="bbox 1173 410 1513 449">
           <span class="alternatives">
-            <ins title="nlp 2.00">δσυναναιρούμενα.</ins>
+            <ins class="alt" title="nlp 2.00">συναναιρούμενα.</ins>
+          </span>
+        </span>
+        <span id="w_39_1" class="ocr_word" title="bbox 1173 410 1513 449">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1576 393 1638 435" lang="grc">
@@ -240,11 +245,6 @@
         <span id="w_43" class="ocr_word" title="bbox 1948 395 2011 435" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_44" class="ocr_word" title="bbox 2034 395 2095 434" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπὶ</ins>
           </span>
         </span>
       </span>
@@ -1412,7 +1412,7 @@
         </span>
         <span id="w_274" class="ocr_word" title="bbox 2078 1704 2161 1740" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">100ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1985,16 +1985,11 @@
         </span>
         <span id="w_386" class="ocr_word" title="bbox 2002 2341 2102 2379" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γενέ-</ins>
+            <ins title="nlp 2.00">γενέσθαι·</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 426 2393 2103 2450">
-        <span id="w_387" class="ocr_word" title="bbox 426 2394 536 2435" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σθαι·</ins>
-          </span>
-        </span>
         <span id="w_388" class="ocr_word" title="bbox 583 2394 643 2434" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀεὶ</ins>
@@ -2268,9 +2263,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 357 2739 2172 2785">
-        <span id="w_441" class="ocr_word" title="bbox 357 2742 489 2776">
+        <span id="w_441_0" class="ocr_word" title="bbox 357 2742 489 2776">
           <span class="alternatives">
-            <ins title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">scribas</ins>
+          </span>
+        </span>
+        <span id="w_441_1" class="ocr_word" title="bbox 357 2742 489 2776">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 516 2740 789 2785" lang="grc">
@@ -2321,11 +2321,6 @@
         <span id="w_451" class="ocr_word" title="bbox 1825 2743 1850 2777">
           <span class="alternatives">
             <ins title="nlp 2.00">C</ins>
-          </span>
-        </span>
-        <span id="w_452" class="ocr_word" title="bbox 2066 2742 2172 2783">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἄλλῳ]</ins>
           </span>
         </span>
       </span>
