--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0046.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0046.html
@@ -71,14 +71,9 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1137 215 1145 230" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">‘</ins>
-          </span>
-        </span>
         <span id="w_13" class="ocr_word" title="bbox 1159 215 1286 268" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑγείας</ins>
+            <ins class="alt" title="nlp 2.00">‘ὑγείας</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1317 210 1600 268" lang="grc">
@@ -115,12 +110,7 @@
       <span class="ocr_line" title="bbox 384 285 2063 345">
         <span id="w_21" class="ocr_word" title="bbox 586 290 593 303" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">‘</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 608 306 725 345" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τέχνη</ins>
+            <ins title="nlp 2.00">‘τέχνη</ins>
           </span>
         </span>
         <span id="w_23" class="ocr_word" title="bbox 773 305 858 342" lang="grc">
@@ -2062,8 +2052,7 @@
         </span>
         <span id="w_403" class="ocr_word" title="bbox 1747 2767 1811 2789">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">oui.</ins>
-            <del title="nlp 0.90">oui.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_404" class="ocr_word" title="bbox 1831 2756 1856 2789">
@@ -2080,8 +2069,7 @@
         </span>
         <span id="w_406" class="ocr_word" title="bbox 2097 2757 2152 2789">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">xcd</ins>
-            <del title="nlp 0.90">xcd</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -2151,8 +2139,7 @@
         </span>
         <span id="w_419" class="ocr_word" title="bbox 2087 2814 2151 2847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ozo</ins>
-            <del title="nlp 0.90">Ozo</del>
+            <ins title="nlp 2.00">ὑπὸ</ins>
           </span>
         </span>
       </span>
@@ -2441,14 +2428,12 @@
         </span>
         <span id="w_471" class="ocr_word" title="bbox 1932 3061 2040 3082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ovxtov</ins>
-            <del title="nlp 0.90">ovxtov</del>
+            <ins title="nlp 2.00">ὄντων</ins>
           </span>
         </span>
         <span id="w_472" class="ocr_word" title="bbox 2067 3059 2152 3082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">estiv</ins>
-            <del title="nlp 0.90">estiv</del>
+            <ins title="nlp 2.00">ἐστὶν</ins>
           </span>
         </span>
       </span>
