--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0247.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0247.html
@@ -1866,16 +1866,11 @@
         </span>
         <span id="w_360" class="ocr_word" title="bbox 1725 2409 1812 2447" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπο-</ins>
+            <ins title="nlp 2.00">ὑποστρέφει</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 137 2475 1812 2532">
-        <span id="w_361" class="ocr_word" title="bbox 137 2487 290 2528" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρέφει</ins>
-          </span>
-        </span>
         <span id="w_362" class="ocr_word" title="bbox 313 2477 355 2516" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
