--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0248.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0248.html
@@ -791,7 +791,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 1210 951 1248 1005" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ὁ</ins>
+            <ins title="nlp 2.00">ὁ</ins>
           </span>
         </span>
         <span id="w_151" class="ocr_word" title="bbox 1271 954 1380 1006" lang="grc">
@@ -1907,7 +1907,7 @@
         </span>
         <span id="w_369" class="ocr_word" title="bbox 793 2191 900 2248">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_370" class="ocr_word" title="bbox 939 2210 981 2234" lang="grc">
