--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0249.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0249.html
@@ -1143,7 +1143,7 @@
       <span class="ocr_line" title="bbox 149 1386 1822 1443">
         <span id="w_218" class="ocr_word" title="bbox 149 1386 229 1443">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὰ&amp;#x003Ε;</ins>
+            <ins title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 253 1403 347 1442" lang="grc">
