--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0274.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0274.html
@@ -88,7 +88,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 984 171 1112 225" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">θέσιν</ins>
+            <ins title="nlp 2.00">(θέσιν</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1134 172 1204 225" lang="grc">
@@ -242,7 +242,7 @@
         </span>
         <span id="w_44" class="ocr_word" title="bbox 1427 310 1556 364" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποιὸς</ins>
+            <ins title="nlp 2.00">(ποιὸς</ins>
           </span>
         </span>
         <span id="w_45" class="ocr_word" title="bbox 1586 309 1658 364" lang="grc">
@@ -908,9 +908,9 @@
             <ins title="nlp 2.00">ὑπογραφὴν</ins>
           </span>
         </span>
-        <span id="w_173" class="ocr_word" title="bbox 2055 1210 2140 1245">
+        <span id="w_173_0" class="ocr_word" title="bbox 2055 1210 2140 1245">
           <span class="alternatives">
-            <ins title="nlp 2.00">279</ins>
+            <ins class="alt" title="nlp 2.00">279v</ins>
           </span>
         </span>
       </span>
@@ -2182,9 +2182,9 @@
             <ins class="alt" title="nlp 1.00">διάθεσις</ins>
           </span>
         </span>
-        <span id="w_424" class="ocr_word" title="bbox 2012 2731 2075 2772">
+        <span id="w_424_0" class="ocr_word" title="bbox 2012 2731 2075 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
       </span>
@@ -2264,15 +2264,14 @@
             <ins class="alt" title="nlp 1.00">κἀν]</ins>
           </span>
         </span>
-        <span id="w_439" class="ocr_word" title="bbox 1939 2881 1995 2902" lang="grc">
+        <span id="w_439_0" class="ocr_word" title="bbox 1939 2881 1995 2902">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_440" class="ocr_word" title="bbox 2022 2869 2047 2902">
+        <span id="w_439_1" class="ocr_word" title="bbox 1939 2881 1995 2902">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">P</ins>
-            <del title="nlp 0.90">P</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2530,9 +2529,14 @@
             <del title="nlp 0.90">post</del>
           </span>
         </span>
-        <span id="w_489" class="ocr_word" title="bbox 1403 3120 1523 3152" lang="grc">
+        <span id="w_489_0" class="ocr_word" title="bbox 1403 3120 1523 3152">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαηγ.</ins>
+            <ins class="alt" title="nlp 2.00">κατηγ.</ins>
+          </span>
+        </span>
+        <span id="w_489_1" class="ocr_word" title="bbox 1403 3120 1523 3152">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_490" class="ocr_word" title="bbox 1564 3107 1682 3140">
@@ -2549,11 +2553,6 @@
         <span id="w_492" class="ocr_word" title="bbox 1775 3105 1925 3142" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἅλλως—ὄντων</ins>
-          </span>
-        </span>
-        <span id="w_493" class="ocr_word" title="bbox 2070 3101 2140 3145">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(35)</ins>
           </span>
         </span>
       </span>
