--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0250.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0250.html
@@ -1807,7 +1807,7 @@
         </span>
         <span id="w_351" class="ocr_word" title="bbox 2070 2209 2158 2245">
           <span class="alternatives">
-            <ins title="nlp 2.00">268ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
