--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0047.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0047.html
@@ -172,7 +172,7 @@
         </span>
         <span id="w_30" class="ocr_word" title="bbox 1340 403 1454 458" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κατὰ</ins>
+            <ins title="nlp 2.00">[κατὰ</ins>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1485 421 1553 449" lang="grc">
@@ -202,9 +202,14 @@
             <ins class="alt" title="nlp 1.00">δόξας]</ins>
           </span>
         </span>
-        <span id="w_36" class="ocr_word" title="bbox 577 474 622 528">
+        <span id="w_36_0" class="ocr_word" title="bbox 577 474 622 528">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἦ</ins>
+            <ins class="alt" title="nlp 2.00">(ἦ</ins>
+          </span>
+        </span>
+        <span id="w_36_1" class="ocr_word" title="bbox 577 474 622 528">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 654 489 724 526" lang="grc">
@@ -245,11 +250,6 @@
         <span id="w_44" class="ocr_word" title="bbox 1631 472 1718 513" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
-          </span>
-        </span>
-        <span id="w_45" class="ocr_word" title="bbox 1763 487 1893 526" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
           </span>
         </span>
       </span>
@@ -871,7 +871,7 @@
         </span>
         <span id="w_167" class="ocr_word" title="bbox 432 1230 496 1284" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐ</ins>
+            <ins title="nlp 2.00">(οὐ</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 529 1246 600 1284" lang="grc">
@@ -1880,7 +1880,7 @@
       <span class="ocr_line" title="bbox 156 2439 1963 2495">
         <span id="w_364" class="ocr_word" title="bbox 156 2451 168 2482" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">1 ἦλθες</ins>
+            <ins title="nlp 2.00">ἦλθες</ins>
           </span>
         </span>
         <span id="w_365" class="ocr_word" title="bbox 323 2450 366 2483">
@@ -2029,8 +2029,7 @@
       <span class="ocr_line" title="bbox 153 2558 1900 2610">
         <span id="w_391" class="ocr_word" title="bbox 153 2579 172 2610">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ti</ins>
-            <del title="nlp 0.90">Ti</del>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_392" class="ocr_word" title="bbox 200 2565 375 2610" lang="grc">
@@ -2052,8 +2051,7 @@
         </span>
         <span id="w_395" class="ocr_word" title="bbox 871 2578 891 2597">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">o</ins>
-            <del title="nlp 0.90">o</del>
+            <ins title="nlp 2.00">3</ins>
           </span>
         </span>
         <span id="w_396" class="ocr_word" title="bbox 917 2564 1005 2596" lang="grc">
@@ -2068,8 +2066,7 @@
         </span>
         <span id="w_398" class="ocr_word" title="bbox 1114 2560 1186 2595">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’EX.</ins>
-            <del title="nlp 0.90">’EX.</del>
+            <ins title="nlp 2.00">Ἑλ.</ins>
           </span>
         </span>
         <span id="w_399" class="ocr_word" title="bbox 1216 2574 1248 2606" lang="grc">
@@ -2145,8 +2142,7 @@
         </span>
         <span id="w_412" class="ocr_word" title="bbox 691 2634 706 2656">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">t;</ins>
-            <del title="nlp 0.90">t;</del>
+            <ins title="nlp 2.00">c</ins>
           </span>
         </span>
         <span id="w_413" class="ocr_word" title="bbox 899 2623 930 2656">
@@ -2178,7 +2174,7 @@
         </span>
         <span id="w_418" class="ocr_word" title="bbox 1543 2616 1739 2661" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">6 ἀμφιβάλειν</ins>
+            <ins title="nlp 2.00">ἀμφιβάλειν</ins>
           </span>
         </span>
         <span id="w_419" class="ocr_word" title="bbox 1769 2616 1823 2650">
@@ -2296,8 +2292,7 @@
         </span>
         <span id="w_439" class="ocr_word" title="bbox 1304 2738 1342 2770">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">U</ins>
-            <del title="nlp 0.90">U</del>
+            <ins title="nlp 2.00">14</ins>
           </span>
         </span>
         <span id="w_440" class="ocr_word" title="bbox 1369 2748 1470 2769" lang="grc">
@@ -2307,8 +2302,7 @@
         </span>
         <span id="w_441" class="ocr_word" title="bbox 1499 2746 1564 2769">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">cm.</ins>
-            <del title="nlp 0.90">cm.</del>
+            <ins title="nlp 2.00">om.</ins>
           </span>
         </span>
         <span id="w_442" class="ocr_word" title="bbox 1585 2735 1609 2767">
@@ -2332,8 +2326,7 @@
         </span>
         <span id="w_445" class="ocr_word" title="bbox 220 2798 363 2832">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">dveXeiov</ins>
-            <del title="nlp 0.90">dveXeiov</del>
+            <ins title="nlp 2.00">ἀγελεων</ins>
           </span>
         </span>
         <span id="w_446" class="ocr_word" title="bbox 390 2811 476 2834">
@@ -2572,7 +2565,7 @@
         </span>
         <span id="w_490" class="ocr_word" title="bbox 1169 2972 1348 3007" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">scribas τῆς διαθέσεως</ins>
+            <ins title="nlp 2.00">τῆς διαθέσεως</ins>
           </span>
         </span>
         <span id="w_491" class="ocr_word" title="bbox 1544 2967 1588 3000">
@@ -2733,7 +2726,7 @@
         </span>
         <span id="w_520" class="ocr_word" title="bbox 1342 3087 1490 3130">
           <span class="alternatives">
-            <ins title="nlp 2.00"> ἐννέορος</ins>
+            <ins title="nlp 2.00">ἐννέορος</ins>
           </span>
         </span>
         <span id="w_521" class="ocr_word" title="bbox 1517 3084 1586 3117">
