--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0197.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0197.html
@@ -1096,9 +1096,14 @@
             <ins title="nlp 2.00">Ἄλλαι</ins>
           </span>
         </span>
-        <span id="w_212" class="ocr_word" title="bbox 408 1442 509 1496">
+        <span id="w_212_0" class="ocr_word" title="bbox 408 1442 509 1496">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὖν&gt;</ins>
+          </span>
+        </span>
+        <span id="w_212_1" class="ocr_word" title="bbox 408 1442 509 1496">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_213" class="ocr_word" title="bbox 541 1456 632 1482" lang="grc">
@@ -1134,11 +1139,6 @@
         <span id="w_219" class="ocr_word" title="bbox 1536 1450 1729 1488" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαφοραί·</ins>
-          </span>
-        </span>
-        <span id="w_220" class="ocr_word" title="bbox 1763 1450 1801 1474" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
       </span>
@@ -2664,7 +2664,7 @@
         </span>
         <span id="w_516" class="ocr_word" title="bbox 566 3108 713 3151">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τεταγμ.</ins>
+            <ins title="nlp 2.00">τεταγμ.</ins>
           </span>
         </span>
         <span id="w_517" class="ocr_word" title="bbox 742 3105 823 3147">
@@ -2680,7 +2680,7 @@
         </span>
         <span id="w_519" class="ocr_word" title="bbox 907 3108 985 3147" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">post αὐτὰς</ins>
+            <ins title="nlp 2.00">αὐτὰς</ins>
           </span>
         </span>
         <span id="w_520" class="ocr_word" title="bbox 1240 3113 1398 3146">
