--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0137.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0137.html
@@ -1389,9 +1389,9 @@
             <ins title="nlp 2.00">περιέχει</ins>
           </span>
         </span>
-        <span id="w_268" class="ocr_word" title="bbox 1814 2092 1890 2130">
+        <span id="w_268_0" class="ocr_word" title="bbox 1814 2092 1890 2130">
           <span class="alternatives">
-            <ins title="nlp 2.00">101ν</ins>
+            <ins class="alt" title="nlp 2.00">101v</ins>
           </span>
         </span>
       </span>
@@ -1838,9 +1838,14 @@
             <ins class="alt" title="nlp 1.00">τι</ins>
           </span>
         </span>
-        <span id="w_357" class="ocr_word" title="bbox 1252 2715 1295 2754" lang="grc">
+        <span id="w_357_0" class="ocr_word" title="bbox 1252 2715 1295 2754">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τι</ins>
+            <ins class="alt" title="nlp 2.00">(τι</ins>
+          </span>
+        </span>
+        <span id="w_357_1" class="ocr_word" title="bbox 1252 2715 1295 2754">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1321 2714 1508 2757">
@@ -1856,11 +1861,6 @@
         <span id="w_360" class="ocr_word" title="bbox 1732 2715 1751 2748">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">6</ins>
-          </span>
-        </span>
-        <span id="w_361" class="ocr_word" title="bbox 1778 2726 1893 2759" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρᾶξις</ins>
           </span>
         </span>
       </span>
@@ -2015,9 +2015,14 @@
             <ins title="nlp 2.00">ἔστ᾿ </ins>
           </span>
         </span>
-        <span id="w_393" class="ocr_word" title="bbox 574 2907 615 2911">
+        <span id="w_393_0" class="ocr_word" title="bbox 574 2907 615 2911">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">3v—eloo;</ins>
+            <ins class="alt" title="nlp 2.00">ἄν—εἶδος</ins>
+          </span>
+        </span>
+        <span id="w_393_1" class="ocr_word" title="bbox 574 2907 615 2911">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_395" class="ocr_word" title="bbox 749 2899 814 2922">
@@ -2059,11 +2064,6 @@
         <span id="w_402" class="ocr_word" title="bbox 1766 2889 1807 2923">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">13</ins>
-          </span>
-        </span>
-        <span id="w_403" class="ocr_word" title="bbox 1844 2901 1893 2926">
-          <span class="alternatives">
-            <ins title="nlp 2.00">τις</ins>
           </span>
         </span>
       </span>
@@ -2300,8 +2300,7 @@
         </span>
         <span id="w_450" class="ocr_word" title="bbox 603 3123 632 3156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_451" class="ocr_word" title="bbox 826 3122 867 3155">
